samples/_failures_safe/1761792653_b5f603_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2207183.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b2207183.c:174:9: error: expected declaration or statement at end of input
  174 |         tokens[token_count].type = TOKEN_EOF;
      |         ^~~~~~
./samples/SAFE/__tmp_b2207183.c:174:9: error: expected declaration or statement at end of input
